<resources>
    <string name="app_name">Simple Navigation</string>

<!--    Action bar-->
    <string name="store_title">Store</string>
    <string name="help_title">Help</string>
    <string name="options_title">Options</string>
    <string name="product_title">Product</string>

<!-- page body-->
    <string name="store_welcome">Welcome to our Store</string>
    <string name="help_page">How may I help you?</string>
    <string name="theme_text_view">Select your theme</string>
    <string name="language_text_view">Select your language</string>
    <string name="brand_text_view">Brand: </string>
    <string name="model_text_view">Model: </string>
    <string name="description_text_view">Description: </string>
    <string name="pictures_text_view">Pictures</string>





<!--    Buttons-->
    <string name="store_to_help_button">Need Help?</string>
    <string name="help_to_store_button">Return back to store</string>
    <string name="options_button">Settings</string>
    <string name="dark_mode_button">Dark</string>
    <string name="light_mode_button">Light</string>
    <string name="default_mode_button">Default</string>
    <string name="change_accent_button">Change accent color</string>
    <string name="save_accent_button">Save accent color</string>
    <string name="arabic_button">Arabic</string>
    <string name="english_button">English</string>
    <string name="details_button">Details</string>


</resources>