<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data >
        <variable
            name="optionsFragment"
            type="com.example.simplenavigation.OptionsFragment" />
        <variable
            name="viewModel"
            type="com.example.simplenavigation.SharedViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/consLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OptionsFragment">

        <com.skydoves.colorpickerview.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.378"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accentThemeBtn" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/theme_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/englishBtn" />

        <Button
            android:id="@+id/LightThemeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@{viewModel.getSelectedThemeBtn(`light`)}"
            android:onClick='@{ () ->  optionsFragment.changeDisplayMode("Light")}'
            android:text="@string/light_mode_button"
            android:textColor="@{viewModel.textColor}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/DarkThemeBtn"
            app:layout_constraintTop_toTopOf="@+id/DarkThemeBtn"

            />

        <Button
            android:id="@+id/DarkThemeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@{viewModel.getSelectedThemeBtn(`dark`)}"
            android:onClick='@{ () ->  optionsFragment.changeDisplayMode("Dark")}'
            android:text="@string/dark_mode_button"
            android:textColor="@{viewModel.textColor}"
            app:layout_constraintEnd_toStartOf="@+id/LightThemeBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/defaultThemeBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/defaultThemeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@{viewModel.getSelectedThemeBtn(`default`)}"
            android:onClick='@{ () ->  optionsFragment.changeDisplayMode("Default")}'
            android:text="@string/default_mode_button"
            android:textColor="@{viewModel.textColor}"
            app:layout_constraintEnd_toStartOf="@+id/DarkThemeBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/DarkThemeBtn" />

        <Button
            android:id="@+id/accentThemeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@{viewModel.themeColor}"
            android:onClick="@{() -> optionsFragment.changeAccentColor() }"
            android:text="@string/change_accent_button"
            android:textColor="@{viewModel.textColor}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DarkThemeBtn" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/language_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/arabicBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/arabic_button"
            android:textColor="@{viewModel.textColor}"
            android:backgroundTint="@{viewModel.getSelectedThemeBtn(`ar`)}"
            app:layout_constraintEnd_toStartOf="@+id/englishBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:onClick="@{() -> viewModel.changeLanguage(`ar`)}"
            />

        <Button
            android:id="@+id/englishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/english_button"
            android:textColor="@{viewModel.textColor}"
            android:backgroundTint="@{viewModel.getSelectedThemeBtn(`en_US`)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/arabicBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:onClick="@{() -> viewModel.changeLanguage(`en_US`)}"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>